<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="handler"
            type="com.example.cookieschen.network.IssueActivityHandler"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="20dp"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <EditText
            android:id="@+id/title"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="start"
            android:hint="@string/title"
            android:inputType="text"
            tools:ignore="Autofill" />

        <EditText
            android:id="@+id/body"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:gravity="start"
            android:hint="@string/body"
            android:inputType="text"
            android:layout_marginTop="5dp"/>

        <Button
            android:id="@+id/issue_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add"
            android:layout_marginTop="5dp"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/issue_recyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>
</layout>