<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="Repo"
            type="com.example.cookieschen.network.Repo"/>
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        app:contentPadding="5dp"
        app:cardCornerRadius="8dp">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="10dp">

            <LinearLayout
                android:id="@+id/repo_ly"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:orientation="horizontal"
                android:gravity="center">

                <TextView
                    android:id="@+id/repo_name_text"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:text="@string/repo_name_text"/>

                <TextView
                    android:id="@+id/repo_name"
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@{Repo.name}"
                    android:layout_marginStart="10dp" />

            </LinearLayout>

            <TextView
                android:id="@+id/issue_num_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/repo_ly"
                android:layout_marginTop="10dp"
                android:text="@string/issue_num_text"
                />

            <TextView
                android:id="@+id/issue_num"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/repo_ly"
                app:layout_constraintLeft_toRightOf="@+id/issue_num_text"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@{Integer.toString(Repo.open_issues)}" />

            <TextView
                android:id="@+id/repo_description_text"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/issue_num_text"
                android:layout_marginTop="10dp"
                android:text="@string/repo_description_text" />

            <TextView
                android:id="@+id/repo_description"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/issue_num_text"
                app:layout_constraintLeft_toRightOf="@+id/repo_description_text"
                android:layout_marginTop="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:text="@{Repo.description}" />


        </android.support.constraint.ConstraintLayout>

    </android.support.v7.widget.CardView>
</layout>